--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
     font-style: normal;
 }
 
+html, body{
+    scroll-behavior: smooth;
 
+}
 
 *{margin: 0; padding: 0; font-family: BMJUA;}
 ul{list-style: none;}
@@ -50,11 +53,14 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
+
 }
 
 
 .s1 img{
-    text-align: center;
+    /* text-align: center; */
 }
 
 .s1 h1{
@@ -169,12 +175,17 @@ header{
 
 .s3 .box{
     text-align: center;
-    
+    overflow: hidden;
 }
 
+.box .pic{
+    width: 350px;
+    overflow: hidden;
+}
 
 .s3Wrap img{
-    width: 350px;
+    width: 100%;
+    display: block;
 }
 
 
@@ -228,6 +239,13 @@ header{
     height: 100%;
 }
 
+.s4Wrap .pic img{
+    width: 480px;
+    height: 228px;
+}
+
+
+
 
 
 /* --------------------s5 시작 ----------------------------*/
@@ -259,6 +277,7 @@ header{
     color: white;
     display: flex;
     justify-content: center;
+    font-weight: 300;
 }
 
 .s5 h4 img{
@@ -301,16 +320,31 @@ header{
 }
 
 
+
 figure{
-    width: 1200px;
+    z-index: 3;
+    width: 900px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+figure img{
+    width: 100%;
+    display: block;
+}
+
 figure iframe{
     width: 100%;
+}
+
+.wrapClose{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .close{
@@ -322,4 +356,38 @@ figure iframe{
     right: 100px;
     font-size: 20px;
     border: 0;
+}
+
+
+.btnClose{
+    width: 50px;
+    height: 50px;
+    background-color: unset;
+    border: 0;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+.btnClose span{
+    display: block;
+    width: 22px;
+    height: 4px;
+    position: absolute;
+    top:23px;
+    left: 14px;
+    background-color: #fff;
+}
+
+.btnClose span:first-child{
+    transform: rotate(45deg);
+}
+
+.btnClose span:last-child{
+    transform: rotate(-45deg);
+}
+
+
+
+.s3 h3, .s4 h3{
+    padding-top: 60px;
 }
